<resources>
    <string name="app_name">Barkat Computer</string>
    <string name="join_the_community">Join the Barkat Computer customer base now</string>
    <string name="app_slogan">Mobile accessories and mobile repairing</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="enter_name">Name</string>
    <string name="enter_email">Email</string>
    <string name="enter_mobile">Mobile Number</string>
    <string name="enter_password">Password</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_must_be_at_least_6_characters">password must be at least 6 characters</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_we_need_to_know_your_location">First we need to know your Location</string>
    <string name="to_show_you_nearby_listing_and_how_many_swebers_are_waiting_to_share_with_you">To show you nearby listing and how many SNOWBers are waiting to share with you.</string>
    <string name="ok_let_s_go">OK, Let\'s Go</string>
    <string name="hi_user">Hi! %s</string>
    <string name="label_we_need_your_permission">We need your permission!</string>
    <string name="label_go_to_settings">Go to "Settings" and enable/ grant "Location permission" to continue getting your location.</string>
    <string name="got_it">Got It</string>
    <string name="we_need_your_location_permission">We need your location permission to get your home location to search nearby SNOWBers.</string>
    <string name="enable_gps_text">"Enable GPS in your device to allow us to capture your location accurately."</string>
    <string name="allow">Allow</string>
    <string name="permission_required">Permission required!</string>
    <string name="permission_required_details">With location permission, we can find out how many SNOWBers near you to share goods with them. Your location data is safe with us.</string>
    <string name="fetch_location">Fetch Location</string>
    <string name="take_me_to_settings">Take me to Settings</string>
    <string name="set_your_location">Set your location</string>
    <string name="your_data_will_be_safe_and_never_share_with_anyone_else">Your data will be safe and never share with anyone else</string>
    <string name="locate_me">Locate me</string>
    <string name="set_home_location">Set home location</string>
    <string name="home_location_saved">Home location saved</string>
    <string name="see_how_many_user_near_by_you">See how many user near by you</string>
    <string name="snowbers_near_you">SNOWBers near you</string>
    <string name="showing_the_users_near_around_5kms">Showing the users near around 5kms</string>
    <string name="zero">0</string>
    <string name="invite_more_people">Invite more people</string>
    <string name="go_to_home">Go to Home</string>
    <string name="your_location">Your location</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="post">Post</string>
    <string name="offers">Offers</string>
    <string name="chat">Chat</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="add_item">Add Item</string>
    <string name="cover">Cover</string>
    <string name="earphone">Earphone</string>
    <string name="charger">Charger</string>
    <string name="battery">Battery</string>
    <string name="add_image">Add Image</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="description">Description</string>
    <string name="select_qty">Select Qty</string>
    <string name="cost_price">Cost Price</string>
    <string name="submit">Submit</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="permission_denied_by_system">Permission denied by system</string>
    <string name="permission_denied">Permission denied</string>
    <string name="please_add_item_image">Please add image</string>
    <string name="please_enter_title">PLease enter title</string>
    <string name="please_add_cost_price">Please enter cost price</string>
    <string name="invalid_mobile_no">Invalid Mobile No.</string>
    <string name="product">Product</string>
    <string name="add_new_product_in_your_inventory">Add new product in your inventory</string>
    <string name="offer">Offer</string>
    <string name="add_new_offer_for_your_customers">Add new offer for your customers</string>
    <string name="_1">1</string>
    <string name="enter_some_details_about_product">Enter some details about product</string>
    <string name="enter_price_that_cost_to_you">Enter price that cost to you</string>
    <string name="sell_price">Sell Price</string>
    <string name="enter_price_for_sell">Enter price for sell</string>
    <string name="please_add_sell_price">Please enter sell price</string>
    <string name="qty_alert">Quantity Alert!</string>
    <string name="if_you_set_qty_0">If you set quantity 0, the product will show out of stock to the customer.</string>
    <string name="proceed_with_0_qty">Proceed with 0 quantity</string>
    <string name="cancel">Cancel</string>
    <string name="product_added_successfully">Product added successfully!</string>
    <string name="feature_not_implemented">Feature not implemented</string>
    <string name="search_products_by_name">Search Products by Name</string>
    <string name="select_category">Select Category</string>
    <string name="please_select_one_category">Please select one category</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="shop_email">barkatcomputercenter@gmail.com</string>
    <string name="shop_contact_no">+917436009800</string>
    <string name="developed_by">Developed by:</string>
    <string name="peace_tech_solution">Peace Tech Solution</string>
    <string name="peace_email">peacetechsolution.com</string>
    <string name="peace_contact">+918460766740</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="reminder_for_stock">Reminder for stock</string>
    <string name="show_history_to_customer">History to customer</string>
    <string name="customer">Customer</string>
    <string name="normal">Normal</string>
    <string name="premium">Premium</string>
    <string name="personal_details">Personal Details</string>
    <string name="purchases">Purchases</string>
    <string name="other">Other</string>
    <string name="edit">Edit</string>
    <string name="apply">Apply</string>
    <string name="price">Price</string>
    <string name="less_then_100"><![CDATA[< \u20B9 100]]></string>
    <string name="_100_to_250">₹ 100 - ₹ 250</string>
    <string name="_250_to_500">₹ 250 - ₹ 500</string>
    <string name="_500_to_1000">₹ 500 - ₹ 1000</string>
    <string name="_1000_or_more"><![CDATA[> ₹ 1000]]></string>
    <string name="add_new_category">Add new category</string>
    <string name="alert_dialog_title">Alert Dialog Title</string>
    <string name="update_category">Update Category</string>
    <string name="delete_categoty">Delete Category</string>
    <string name="are_you_sure_you_want_to_delete_this_category">Are you sure you want to delete this category?</string>
    <string name="delete">Delete</string>
    <string name="enter_number">Enter number</string>
    <string name="last_30_days">Last 30 Days</string>
    <string name="last_6_months">Last 6 Months</string>
    <string name="last_1_year">Last 1 Year</string>
    <string name="show_all">Show All</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No.</string>
    <string name="dob">Date of Birth</string>
    <string name="save">Save</string>
    <string name="product_details">Product Details</string>
    <string name="in_stock">In Stock</string>
    <string name="book_this_product">Book This Product</string>
    <string name="reviews">Customer Reviews</string>
    <string name="add_review">Add review</string>
    <string name="enter_your_reviews_here">Enter your reviews here</string>
    <string name="add_new_offer">Add new offer</string>
    <string name="grab_this_offer">Grab this offer</string>
    <string name="add_offer">ADD</string>
    <string name="enter_proper_details_about_offer">Enter proper details about offer</string>
    <string name="enter_offer_title">Enter offer title</string>
    <string name="bill">Bill</string>
    <string name="generate_bill_for_customer">Generate bill for customer</string>
    <string name="title_activity_bill">BillActivity</string>
</resources>