<?xml version="1.0" encoding="utf-8" ?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/rounded_dialog"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPriceLabel"
        style="@style/black10alpha7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line"
        android:padding="@dimen/_12sdp"
        android:text="@string/price"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLessThen100"
        style="@style/black12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/less_then_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv100to250"
        style="@style/black12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/_100_to_250"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv250to500"
        style="@style/black12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/_250_to_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv500to1000"
        style="@style/black12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/_500_to_1000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv1000orMore"
        style="@style/black12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/_1000_or_more"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvApplyFilter"
        style="@style/white16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryBorder"
        android:clickable="true"
        android:focusable="true"
        android:enabled="false"
        android:layout_marginTop="@dimen/_30sdp"
        android:foreground="@drawable/ripple_tab"
        android:padding="@dimen/_10sdp"
        android:text="@string/apply"
        android:textAlignment="center" />

</androidx.appcompat.widget.LinearLayoutCompat>